# pydatamcr.co.uk

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: airtable.yaml  hugo.yaml
website/: pelicanconf.py
website/content/events/: test-event-2.md  test-event.md
website/content/pages/: about.md
website/output/: 404.html  about-us.html  archives.html  authors.html  categories.html  events.html  index.html  jobs-board.html  my-first-review.html  sponsorship.html  tags.html
website/output/author/: pydatamcr.html
website/output/category/: review.html
website/output/events/pydata-april-2024/: index.html  info.html
website/output/events/test-article/: index.html  info.html
website/themes/minimal/static/css/: main.css
website/themes/minimal/templates/: base.html  events.html  index.html
website/themes/minimal/templates/pages/: about-us.html  index.html  jobs-board.html  sponsorship.html
