[tool.poetry]
name = "airtable"
version = "0.1.0"
description = "A package for interacting with airtable"
authors = ["jasper <jaspajjr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pyairtable = "^2.2.1"
pelican = {extras = ["markdown"], version = "^4.9.1"}

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
